# koso

./: .gitignore  Cargo.toml  LICENSE
.opencode/: .gitignore  config.json  current-plan.md
.opencode/agents/: pairing-companion.md  review.md  test-writer.md
.opencode/commands/: create-issue.md  epic-status.md  implement-issue.md  review.md  ship.md  split-issue.md
.opencode/skills/create-or-update-issue/: SKILL.md
.opencode/skills/link-pr-to-issue/: SKILL.md
.opencode/skills/pr-description/: SKILL.md
.opencode/skills/split-issue-into-subtasks/: SKILL.md
crates/koso-ai/: Cargo.toml
crates/koso-ai/src/: backend.rs  lib.rs  prompt.rs
crates/koso-complete/: Cargo.toml
crates/koso-complete/src/: engine.rs  lib.rs  provider.rs
crates/koso-core/: Cargo.toml
crates/koso-core/src/: config.rs  event.rs  lib.rs  types.rs
crates/koso-mux/: Cargo.toml
crates/koso-mux/src/: lib.rs  pane.rs  pty.rs  session.rs
crates/koso-plugin/: Cargo.toml
crates/koso-plugin/src/: lib.rs
crates/koso-tui/: Cargo.toml
crates/koso-tui/src/: app.rs  cli.rs  main.rs  ui.rs
plans/: config-cli-args.md
