[package]
name = "koso-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI integration layer — pluggable backends for command generation, output explanation, and assistance"

[dependencies]
koso-core = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
