[package]
name = "koso-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, configuration, and shared primitives for Koso"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
crossterm = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
