[package]
name = "koso-mux"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal multiplexer — PTY management, pane layout, and session persistence"

[dependencies]
koso-core = { workspace = true }
portable-pty = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
